hopefully fixed safari overflow bug

--- a/public/sass/browse.scss
+++ b/public/sass/browse.scss
@@ -35,3 +35,7 @@
     margin-bottom: 10px;
   }
 }
+
+.open-plan-preview {
+  overflow-x: scroll;
+}
